[gd_scene load_steps=2 format=3 uid="uid://bqxvhqxqxqxqx"]

[ext_resource type="Script" path="res://menus/MainMenu.gd" id="1_1"]

[sub_resource type="LabelSettings" id="LabelSettings_1"]
font_size = 32
font_color = Color(0.9, 0.9, 1, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.15, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
custom_minimum_size = Vector2(400, 0)

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "TACTICAL COMBAT"
label_settings = SubResource("LabelSettings_1")
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Strategic Turn-Based Combat"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)

[node name="MenuButtons" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="SinglePlayerButton" type="Button" parent="CenterContainer/VBoxContainer/MenuButtons"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
text = "Single Player"

[node name="VersusButton" type="Button" parent="CenterContainer/VBoxContainer/MenuButtons"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
text = "Versus"

[node name="Spacer2" type="Control" parent="CenterContainer/VBoxContainer/MenuButtons"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer/MenuButtons"]
layout_mode = 2
custom_minimum_size = Vector2(0, 40)
text = "Quit"

[node name="Spacer3" type="Control" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)

[node name="Instructions" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Press 1 for Single Player, 2 for Versus, ESC to Quit"
horizontal_alignment = 1
modulate = Color(0.7, 0.7, 0.7, 1)